# mail-server

./: Cargo.toml
crates/cli/: Cargo.toml
crates/directory/: Cargo.toml
crates/directory/src/: config.rs
crates/imap/: Cargo.toml
crates/imap-proto/: Cargo.toml
crates/jmap/: Cargo.toml
crates/jmap-proto/: Cargo.toml
crates/jmap/src/submission/: set.rs
crates/managesieve/: Cargo.toml
crates/smtp/: Cargo.toml
crates/utils/: Cargo.toml
tests/: Cargo.toml
tests/resources/smtp/messages/: smuggling.eml
tests/src/jmap/: push_subscription.rs
tests/src/smtp/management/: mod.rs  queue.rs
tests/src/smtp/outbound/: mod.rs  smuggling.rs
