[workspace]
resolver = "2"
members = [
    "crates/main",
    "crates/jmap",
    "crates/jmap-proto",
    "crates/imap",
    "crates/imap-proto",
    "crates/smtp",
    "crates/managesieve",
    "crates/nlp",
    "crates/store",
    "crates/directory",
    "crates/utils",
    "crates/maybe-async",
    "crates/cli",
    "crates/install",
    "tests",
]

[workspace.dependencies]
smtp-proto = { version = "=0.1.2" }
mail-auth = { version = "=0.3.7" }
mail-parser = { version = "=0.9.2" }
mail-send = { version = "=0.4.2" }  # breaking changes > 0.4.2
mail-builder = { version = "=0.3" }
sieve-rs = { version = "=0.4" }
jmap-client = "=0.3.2"

[profile.dev]
opt-level = 0
debug = 1
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
panic = 'unwind'
debug-assertions = false
overflow-checks = false
rpath = false
#strip = true

[profile.test]
opt-level = 0
debug = 1
#codegen-units = 16
lto = false
incremental = true
debug-assertions = true
overflow-checks = true
rpath = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = true
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false
